<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context="com.yahoo.lucas.lifecounter.PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_above="@+id/adView">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/defaulthealth"
            android:textSize="90sp"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusone"
            android:textSize="20sp"
            android:id="@+id/button3"
            android:layout_below="@+id/buttonplus"
            android:layout_alignLeft="@+id/buttonplus"
            android:layout_alignStart="@+id/buttonplus" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negone"
            android:textSize="20sp"
            android:id="@+id/button4"
            android:layout_below="@+id/buttonminus"
            android:layout_alignRight="@+id/buttonminus"
            android:layout_alignEnd="@+id/buttonminus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="20sp"
            android:id="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:id="@+id/buttonright"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:id="@+id/buttonleft"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusplus"
            android:textSize="20sp"
            android:id="@+id/buttonplus"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/buttonright"
            android:layout_alignStart="@+id/buttonright" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minmin"
            android:textSize="20sp"
            android:id="@+id/buttonminus"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:layout_above="@+id/buttonplus"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:textSize="50sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Timer"
            android:id="@+id/buttontimer"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset"
            android:id="@+id/buttonreset"
            android:layout_below="@+id/buttontimer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
