<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.yahoo.lucas.lifecounter.StartActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DefaultValue"
            android:id="@+id/textView8"
            android:layout_alignBaseline="@+id/editText8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText8"
            android:hint="@string/enterdefaultvalue"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/textView8"
            android:layout_toEndOf="@id/textView8"
            android:inputType="number"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlternatePlusMinus"
            android:id="@+id/textView3"
            android:layout_alignBaseline="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:hint="@string/entervalue"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/textView3"
            android:layout_toEndOf="@id/textView3"
            android:inputType="number"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumPlayers"
            android:id="@+id/textView7"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_toRightOf="@id/textView7"
            android:layout_toEndOf="@id/textView7"
            android:layout_alignBaseline="@id/textView7"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pone"
            android:id="@+id/textView2"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_toRightOf="@id/textView2"
            android:layout_toEndOf="@id/textView2"
            android:hint="@string/entername"
            android:layout_alignBaseline="@id/textView2"
            android:ems="10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ptwo"
            android:id="@+id/textView4"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_toRightOf="@id/textView4"
            android:layout_toEndOf="@id/textView4"
            android:hint="@string/entername"
            android:layout_alignBaseline="@id/textView4"
            android:ems="10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pthree"
            android:id="@+id/textView5"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_toRightOf="@id/textView5"
            android:layout_toEndOf="@id/textView5"
            android:hint="@string/entername"
            android:layout_alignBaseline="@id/textView5"
            android:ems="10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pfour"
            android:id="@+id/textView6"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:layout_toRightOf="@id/textView6"
            android:layout_toEndOf="@id/textView6"
            android:hint="@string/entername"
            android:layout_alignBaseline="@id/textView6"
            android:ems="10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:id="@+id/button2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>
